--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +7,58 @@
     <title>Document</title>
 </head>
 <body>
-    
+
+    <header>
+        <!--page title-->
+        <a href="">WebStudio</a>
+        <!--Navigating to other pages-->
+        <nav>
+
+    <ul>
+<li><a href="">Студия</a></li>
+<li><a href="">Портфолио</a></li>
+<li><a href="">Контакты</a></li>
+    </ul>
+
+    <ul>
+<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+    </ul>
+
+        </nav>
+
+    </header>
+    <article>
+
+        <h1>Эффективные решения для вашего бизнеса</h1>
+        <h4>Заказать услугу</h4>
+        
+        <!--our abilities-->
+<h4>Внимание к деталям</h4>
+<p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+
+<h4>Пунктуальность</h4>
+<p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+
+<h4>Планирование</h4>
+<p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+        <!--photos of "our abilities"-->
+    <figure>
+        <img src="images/img.png" alt="верстка">
+        <img src="images/img.jpg" alt="дизайн">
+        <img src="images/img (1).png" alt="внешнее оформление">
+    </figure>
+        <!--our team-->
+    <h1>Наша команда</h1>
+        <!--photos and mini-description of "our team"-->
+        <img src="images/img (1).jpg" alt="Игорь Демьяненко">
+
+        <img src="images/img (2).jpg" alt="Ольга Репина">
+
+        <img src="images/img (4).jpg" alt="Николай Тарасов">
+
+        <img src="images/img (3) (1).jpg" alt="Михаил Ермаков">
+
+    </article>
 </body>
 </html>
