end without CSS
1hw

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <article>
 
         <h1>Эффективные решения для вашего бизнеса</h1>
-        <h4>Заказать услугу</h4>
+        <a href="">Заказать услугу</a> 
         
         <!--our abilities-->
 <h4>Внимание к деталям</h4>
@@ -53,12 +53,40 @@
         <!--photos and mini-description of "our team"-->
         <img src="images/img (1).jpg" alt="Игорь Демьяненко">
 
+        <p>Игорь Демьяненко</p>
+
+        <p>Product Designer</p>
+
         <img src="images/img (2).jpg" alt="Ольга Репина">
+
+        <p>Ольга Репина</p>
+
+        <p>Frontend Developer</p>
 
         <img src="images/img (4).jpg" alt="Николай Тарасов">
 
+        <p>Николай Тарасов</p>
+
+        <p>Marketing</p>
+
         <img src="images/img (3) (1).jpg" alt="Михаил Ермаков">
 
+        <p>Михаил Ермаков</p>
+
+        <p>UI Designer</p>
+
     </article>
+    <footer>
+        <!--page title-->
+        <a href="">WebStudio</a>
+        <!--Navigating to other pages footer-->
+        <nav>
+<ul>
+    <li><a href="">г. Киев, пр-т Леси Украинки, 26</a></li>
+    <li><a href="mailto:info@example.com">info@example.com</a></li>
+    <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+</ul>
+        </nav>
+    </footer>
 </body>
 </html>
