--- a/index.html
+++ b/index.html
@@ -9,26 +9,26 @@
 <body>
 
     <header>
-        <!--page title-->
-        <a href="">WebStudio</a>
         <!--Navigating to other pages-->
         <nav>
-
+        <!--page title-->>
+        <a href="./index.html">WebStudio</a>
+        
     <ul>
-<li><a href="">Студия</a></li>
-<li><a href="">Портфолио</a></li>
-<li><a href="">Контакты</a></li>
+<li><a href="./index.html">Студия</a></li>
+<li><a href="./index.html">Портфолио</a></li>
+<li><a href="./index.html">Контакты</a></li>
     </ul>
+
+    </nav>
 
     <ul>
 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
 <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
 
-        </nav>
-
     </header>
-    <article>
+    <main>
 
         <h1>Эффективные решения для вашего бизнеса</h1>
         <a href="">Заказать услугу</a> 
@@ -44,38 +44,41 @@
 <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
         <!--photos of "our abilities"-->
     <figure>
-        <img src="images/img.png" alt="верстка">
-        <img src="images/img.jpg" alt="дизайн">
-        <img src="images/img (1).png" alt="внешнее оформление">
+        <img src="images/img (5).jpg" alt="верстка" width: 370px;
+        height: 294px;>
+        <img src="images/img.jpg" alt="дизайн" width: 370px;
+        height: 294px;>
+        <img src="images/img(1)(1).jpg" alt="внешнее оформление" width: 370px;
+        height: 294px;>
     </figure>
         <!--our team-->
     <h1>Наша команда</h1>
         <!--photos and mini-description of "our team"-->
-        <img src="images/img (1).jpg" alt="Игорь Демьяненко">
+        <img src="images/img(3).jpg" alt="Игорь Демьяненко">
 
         <p>Игорь Демьяненко</p>
 
         <p>Product Designer</p>
 
-        <img src="images/img (2).jpg" alt="Ольга Репина">
+        <img src="images/img(2).jpg" alt="Ольга Репина">
 
         <p>Ольга Репина</p>
 
         <p>Frontend Developer</p>
 
-        <img src="images/img (4).jpg" alt="Николай Тарасов">
+        <img src="images/img(4).jpg" alt="Николай Тарасов">
 
         <p>Николай Тарасов</p>
 
         <p>Marketing</p>
 
-        <img src="images/img (3) (1).jpg" alt="Михаил Ермаков">
+        <img src="images/img(3)(1).jpg" alt="Михаил Ермаков">
 
         <p>Михаил Ермаков</p>
 
         <p>UI Designer</p>
 
-    </article>
+    </main>>
     <footer>
         <!--page title-->
         <a href="">WebStudio</a>
