--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <!--Navigating to other pages-->
         <nav>
-        <!--page title-->>
+        <!--page title-->
         <a href="./index.html">WebStudio</a>
         
     <ul>
@@ -29,22 +29,28 @@
 
     </header>
     <main>
-
+<section>
         <h1>Эффективные решения для вашего бизнеса</h1>
-        <a href="">Заказать услугу</a> 
+        <button>Заказать услугу</button>
         
+</section>
+<section>
         <!--our abilities-->
-<h4>Внимание к деталям</h4>
+<h3>Внимание к деталям</h3>
 <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
 
-<h4>Пунктуальность</h4>
+<h3>Пунктуальность</h3>
 <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
 
-<h4>Планирование</h4>
+<h3>Планирование</h3>
 <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+
+<h3>Современные технологии</h3>
+<p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+</section>
         <!--photos of "our abilities"-->
     <figure>
-        <img src="images/img (5).jpg" alt="верстка" width: 370px;
+        <img src="images/img(5).jpg" alt="верстка" width: 370px;
         height: 294px;>
         <img src="images/img.jpg" alt="дизайн" width: 370px;
         height: 294px;>
@@ -78,10 +84,10 @@
 
         <p>UI Designer</p>
 
-    </main>>
+    </main>
     <footer>
         <!--page title-->
-        <a href="">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <!--Navigating to other pages footer-->
         <nav>
 <ul>
