--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
 <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
         <button>Заказать услугу</button>
-        
 </section>
 <section>
         <!--our abilities-->
@@ -57,8 +56,9 @@
         <img src="images/img(1)(1).jpg" alt="внешнее оформление" width: 370px;
         height: 294px;>
     </figure>
+    <section>
         <!--our team-->
-    <h1>Наша команда</h1>
+    <h2>Наша команда</h2>
         <!--photos and mini-description of "our team"-->
         <img src="images/img(3).jpg" alt="Игорь Демьяненко">
 
@@ -83,19 +83,19 @@
         <p>Михаил Ермаков</p>
 
         <p>UI Designer</p>
-
+        </section>
     </main>
     <footer>
         <!--page title-->
         <a href="./index.html">WebStudio</a>
         <!--Navigating to other pages footer-->
-        <nav>
+<address>
 <ul>
     <li><a href="">г. Киев, пр-т Леси Украинки, 26</a></li>
     <li><a href="mailto:info@example.com">info@example.com</a></li>
     <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
 </ul>
-        </nav>
+</address>
     </footer>
 </body>
 </html>
