--- a/index.html
+++ b/index.html
@@ -31,58 +31,61 @@
     <main>
 <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
-        <button>Заказать услугу</button>
+        <button type="button">Заказать услугу</button>
 </section>
 <section>
         <!--our abilities-->
-<h3>Внимание к деталям</h3>
-<p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+        <ul>
+<li><h3>Внимание к деталям</h3>
+<p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p></li>
 
-<h3>Пунктуальность</h3>
-<p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+<li><h3>Пунктуальность</h3>
+<p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p></li>
 
-<h3>Планирование</h3>
-<p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+<li><h3>Планирование</h3>
+<p>Равным образом консультация с широким активом в значительной степени обуславливает.</p></li>
 
-<h3>Современные технологии</h3>
-<p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+<li><h3>Современные технологии</h3>
+<p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p></li>
+        </ul>
 </section>
         <!--photos of "our abilities"-->
-    <figure>
-        <img src="images/img(5).jpg" alt="верстка" width: 370px;
-        height: 294px;>
-        <img src="images/img.jpg" alt="дизайн" width: 370px;
-        height: 294px;>
-        <img src="images/img(1)(1).jpg" alt="внешнее оформление" width: 370px;
-        height: 294px;>
-    </figure>
+    <section>
+        <ul>
+        <li></li><img src="images/img(5).jpg" alt="верстка" ></li>
+        <li><img src="images/img.jpg" alt="дизайн"></li>
+        <li><img src="images/img(1)(1).jpg" alt="внешнее оформление" s></li>
+        </ul>
+    </section>
     <section>
         <!--our team-->
     <h2>Наша команда</h2>
         <!--photos and mini-description of "our team"-->
-        <img src="images/img(3).jpg" alt="Игорь Демьяненко">
+        <ul>
+        <li><img src="images/img(3).jpg" alt="Игорь Демьяненко">
 
-        <p>Игорь Демьяненко</p>
+        <h3>Игорь Демьяненко</h3>
 
-        <p>Product Designer</p>
+        <p lang="en">Product Designer</p></li>
 
-        <img src="images/img(2).jpg" alt="Ольга Репина">
+        <li><img src="images/img(2).jpg" alt="Ольга Репина">
 
-        <p>Ольга Репина</p>
+        <h3>Ольга Репина</h3>
 
-        <p>Frontend Developer</p>
+        <p lang="en">Frontend Developer</p></li>
 
-        <img src="images/img(4).jpg" alt="Николай Тарасов">
+        <li><img src="images/img(4).jpg" alt="Николай Тарасов">
 
-        <p>Николай Тарасов</p>
+        <h3>Николай Тарасов</h3>
 
-        <p>Marketing</p>
+        <p lang="en">Marketing</p></li>
 
-        <img src="images/img(3)(1).jpg" alt="Михаил Ермаков">
+        <li><img src="images/img(3)(1).jpg" alt="Михаил Ермаков">
 
-        <p>Михаил Ермаков</p>
+        <h3>Михаил Ермаков</h3>
 
-        <p>UI Designer</p>
+        <p lang="en">UI Designer</p></li>
+        </ul>
         </section>
     </main>
     <footer>
