--- a/index.html
+++ b/index.html
@@ -52,9 +52,12 @@
         <!--photos of "our abilities"-->
     <section>
         <ul>
-        <li></li><img src="images/img(5).jpg" alt="верстка" ></li>
-        <li><img src="images/img.jpg" alt="дизайн"></li>
-        <li><img src="images/img(1)(1).jpg" alt="внешнее оформление" s></li>
+        <li></li><img src="images/img(5).jpg" alt="верстка" width: 370px;
+        height: 294px;></li>
+        <li><img src="images/img.jpg" alt="дизайн" width: 370px;
+        height: 294px;></li>
+        <li><img src="images/img(1)(1).jpg" alt="внешнее оформление" width: 370px;
+        height: 294px;></li>
         </ul>
     </section>
     <section>
