--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 </section>
 <section>
         <!--our abilities-->
+        <h2 hidden>our abilities</h2>
         <ul>
 <li><h3>Внимание к деталям</h3>
 <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p></li>
@@ -52,9 +53,9 @@
         <!--photos of "our abilities"-->
     <div>
         <ul>
-        <li><img src="images/img(5).jpg" alt="верстка"></li>
+        <li><img src="images/img (5).jpg" alt="верстка"></li>
         <li><img src="images/img.jpg" alt="дизайн"></li>
-        <li><img src="images/img(1)(1).jpg" alt="внешнее оформление"></li>
+        <li><img src="images/img (1) (1).jpg" alt="внешнее оформление"></li>
         </ul>
     </div>
     <section>
@@ -62,25 +63,25 @@
     <h2>Наша команда</h2>
         <!--photos and mini-description of "our team"-->
         <ul>
-        <li><img src="images/img(3).jpg" alt="Игорь Демьяненко">
+        <li><img src="images/img (3).jpg" alt="Игорь Демьяненко">
 
         <h3>Игорь Демьяненко</h3>
 
         <p lang="en">Product Designer</p></li>
 
-        <li><img src="images/img(2).jpg" alt="Ольга Репина">
+        <li><img src="images/img (2).jpg" alt="Ольга Репина">
 
         <h3>Ольга Репина</h3>
 
         <p lang="en">Frontend Developer</p></li>
 
-        <li><img src="images/img(4).jpg" alt="Николай Тарасов">
+        <li><img src="images/img (4).jpg" alt="Николай Тарасов">
 
         <h3>Николай Тарасов</h3>
 
         <p lang="en">Marketing</p></li>
 
-        <li><img src="images/img(3)(1).jpg" alt="Михаил Ермаков">
+        <li><img src="images/img (3) (1).jpg" alt="Михаил Ермаков">
 
         <h3>Михаил Ермаков</h3>
 
